<resources>
    <string name="app_name">Cluster</string>
    <string name="title_Manage">Manage</string>
    <string name="title_Interested">Interested</string>
    <string name="title_Find">Find</string>

    <string name="hello_manage_fragment">Hello manage fragment</string>
    <string name="hello_interested_fragment">Interested Fragment Implementation in 2nd Sprint</string>
    <string name="hello_find_fragment">Find Fragment Implementation in 2nd Sprint</string>

    <string name="email_hint">Email</string>
    <string name="pwd_hint">Password</string>

    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="pwd_forgot">Forgot Password?</string>
    <string name="access_denied">Authentication failed, access denied</string>
    <string name="sign_up_fail">Sign up failed, please try again: </string>

    <string name="missing_email">Please enter an email</string>
    <string name="missing_pwd">Please enter a password</string>
    <string name="minimum_pwd">Password must be 6 characters or longer</string>

    <string name="reset_pwd">Reset Password</string>
    <string name="reset_pwd_instr">Enter account email to send password reset link</string>
    <string name="reset_pwd_fail">Failed to send email link. Does that account exist?</string>
    <string name="reset_pwd_success">Email sent!</string>

    <string name="username_placeholder">Display name:\u0020</string>
    <string name="change_pwd">Change Password</string>
    <string name="change_uname">Change Display Name</string>
    <string name="change_pwd_confirm">Confirm</string>
    <string name="old_pwd_hint">Old password</string>
    <string name="new_pwd_hint">New password</string>
    <string name="new_uname_hint">New display name</string>
    <string name="pwd_update_success">Password successfully updated, logging out…</string>
    <string name="pwd_update_fail">Failed to update password</string>
    <string name="bad_pwd">Bad password</string>
    <string name="bad_uname">Empty input</string>
    <string name="same_pwd">New password must be different</string>
    <string name="change_pwd_dialogue">Change password</string>
    <string name="change_pwd_logout">Are you sure you want to change your password? This will log you out.</string>
    <string name="change_uname_msg">This will change your display name to all other users. Proceed?</string>

    <string name="sign_out">SIGN OUT</string>
    <string name="sign_out_dialog">Sign Out</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm">Are you sure you want to delete your account?</string>
    <string name="delete_account_failure">Failed to delete account.</string>
    <string name="sure">Yes, I\'m sure</string>
    <string name="not_sure">No</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="missing_text_resource"> </string>
    <string name="event_title">Title</string>
    <string name="set_start">Start time</string>
    <string name="set_end">End time</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_confirm">Are you sure you want to delete this event?</string>

    <string name="no_input_error">No input</string>
    <string name="length_error">Input too long</string>
    <string name="time_passed_error">Given start time has already passed</string>
    <string name="negative_duration_error">End time must pass after start time</string>

    <string name="start_time">Start Time:\u0020</string>
    <string name="end_time">End Time:\u0020</string>
    <string name="location">Location:\u0020</string>
    <string name="description">Description:\u0020</string>
    <string name="organizer">Organizer ID:\u0020</string>
    <string name="stars">Stars:\u0020</string>
</resources>