<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    tools:context="com.example.cluster.AddEventActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_trash" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/desc"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            app:passwordToggleEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:inputType="textShortMessage"
                android:textColor="@color/title" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/set_start"
                android:textAlignment="viewStart"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/set_start"
                android:textAlignment="viewStart"
                android:textColor="@color/title"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/set_end"
                android:textAlignment="viewStart"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/set_end"
                android:textAlignment="viewStart"
                android:textColor="@color/title"
                android:textSize="18sp" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/desc"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:counterTextAppearance="@android:style/TextAppearance.Holo.Small.Inverse">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location"
                android:inputType="textPostalAddress"
                android:textColor="@color/title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/desc"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            app:counterTextAppearance="@android:style/TextAppearance.Holo.Small.Inverse">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/event_description"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textColor="@color/title" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>